# RayLibFlecsGameTemplate

./: CMakeLists.txt
RayLibFlecsGameTemplate/Application/: Application.cpp
RayLibFlecsGameTemplate/Systems/: Systems.h
RayLibFlecsGameTemplate/Systems/Impl/: RenderFPSSystem.h
include/Systems/: AssetLoadSystem.h
src/Application/: Application.cpp
src/AssetManager/: AssetManager.cpp
src/AudioManager/: AudioManager.cpp
src/Components/: Components.h
src/Systems/: AssetsLoadSystem.cpp  PlayMusicSystem.cpp  PlayMusicSystem.h  Systems.h
src/Systems/Impl/: AssetLoadSystem.h  PlayMusicSystem.h  RenderFPSSystem.cpp  RenderFPSSystem.h
